tests/ui/enum-not-struct.stderr
error: TypeStateBuilder only supports structs, not enums
 --> tests/ui/enum-not-struct.rs:5:1
  |
5 | / enum NotAStruct {
6 | |     Variant1(String),
7 | |     Variant2 { field: u32 },
8 | | }
  | |_^

error[E0599]: no variant or associated item named `builder` found for enum `NotAStruct` in the current scope
  --> tests/ui/enum-not-struct.rs:11:33
   |
5  | enum NotAStruct {
   | --------------- variant or associated item `builder` not found for this enum
...
11 |     let _instance = NotAStruct::builder()
   |                                 ^^^^^^^ variant or associated item not found in `NotAStruct`
